--- a/hello-view.fxml
+++ b/hello-view.fxml
@@ -4,12 +4,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="702.0" prefWidth="496.0" spacing="20.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.guil.HelloController">
+<VBox alignment="CENTER" prefHeight="702.0" prefWidth="496.0" spacing="20.0" style="-fx-background-color: lightgrey;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.guil.GUIController1">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
@@ -104,5 +105,13 @@
             <Font name="Calibri Bold" size="16.0" />
          </font>
       </Button>
+      <Button mnemonicParsing="false" onAction="#graphbutton" text="Graph and SNA" textFill="RED">
+         <font>
+            <Font name="Calibri Bold" size="20.0" />
+         </font>
+      </Button>
    </children>
+   <effect>
+      <ColorAdjust />
+   </effect>
 </VBox>
